--- a/_sass/basscss/_utility-white-space.scss
+++ b/_sass/basscss/_utility-white-space.scss
@@ -158,7 +158,7 @@
 }
 
 .py3 {
-  padding-top: $space-2;
+  padding-top: 1.5rem;
   padding-bottom: $space-3;
 }
 
